# cmantic

./: .gitignore  CMakeLists.txt  Intermediate_representation.md  README.md  analyzer.flex  attributes.md  cmantic  code_generator.cpp  code_generator.hpp  conflict.txt  custom_lexer.hpp  dictionary.flex  enums2.txt  er.flex  extract_table.py  grammar.md  logger.cpp  main.cpp  parser  parser.gv  parser.output  parser.tab.cc  parser.tab.hh  parser.y  predictive_analysis.cpp  predictive_analysis.h  predictive_analysis.hpp  predictive_parser.cpp  predictive_parser.hpp  predictive_table.cpp  predictive_table.hpp  program_map.hpp  program_map.hpp.gch  recursive-parser.cpp  recursive-parser.hpp  recursive_parser.cpp  recursive_parser.hpp  run.sh  run_tests.sh  symbol_table.cpp  (+19 more)
bison_test/: calc  calc.l  calc.tab.c  calc.y  readme.md
output/: caso_aninhado  caso_com_chamada  caso_multiplo  chamadas_aninhadas  controlo  estruturas  expressoes  operadores_avancados  registers  swapexample  teste_referencias  teste_retorno  teste_unless
project_1/: CMakeLists.txt  logger.hpp  predictive_parser.hpp
project_2/tests/invalid/: program_duplicate_var.cmt
project_2/tests/valid/: program_case_testing.cmt  program_procedure_decl.cmt  program_register_decl.cmt  program_swap.cmt  program_var_decl.cmt
test_cases/: caso_aninhado.cmt  caso_multiplo.cmt  chamadas_aninhadas.cmt  estruturas.cmt  expressoes.cmt  operadores_avancados.cmt  registers.cmt  teste_referencias.cmt
test_cases/invalid/: retorno_invalido.cmt  sem_main.cmt
tests/: program_1.cmt  program_procedures.cmt  program_var_decl.cmt  test_symbol_table.cpp
tests/invalid/: argumentos_errados.cmt  program_inexistent_var.cmt  program_out_of_scope.cmt  program_type_change.cmt  uso_invalido.cmt
tests/valid/: caso_com_chamada.cmt  controlo.cmt  program_case_testing.cmt  program_code_blocks.cmt  program_expressions.cmt  program_procedure_decl.cmt  program_register_decl.cmt  program_switch_case.cmt  program_var_decl.cmt  swapexample.cmt  teste_referencias.cmt  teste_retorno.cmt  teste_unless.cmt
utils/: enums.txt  output.txt
